--- a/service-message/pom.xml
+++ b/service-message/pom.xml
@@ -5,9 +5,10 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.6.RELEASE</version>
+        <version>2.4.3</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
     <groupId>fr.univ.orleans.inov</groupId>
     <artifactId>service-message</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -15,8 +16,8 @@
     <description>Demo project for Spring Boot</description>
 
     <properties>
-        <java.version>14</java.version>
-        <spring-cloud.version>Hoxton.SR3</spring-cloud.version>
+        <java.version>15</java.version>
+        <spring-cloud.version>2020.0.1</spring-cloud.version>
     </properties>
 
     <dependencies>
@@ -37,12 +38,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.junit.vintage</groupId>
-                    <artifactId>junit-vintage-engine</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>io.projectreactor</groupId>
@@ -68,41 +63,10 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-
-            <plugin>
-                <groupId>com.google.cloud.tools</groupId>
-                <artifactId>jib-maven-plugin</artifactId>
-                <version>2.1.0</version>
-                <executions>
-                    <execution>
-                        <id>default</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>dockerBuild</goal>
-                        </goals>
-                    </execution>
-                </executions>
                 <configuration>
-                    <container>
-                        <!-- pour exporter un no de port :
-                            <ports>
-                                <port>8761</port>
-                            </ports>
-                        -->
-                        <creationTime>USE_CURRENT_TIMESTAMP</creationTime>
-                    </container>
-                    <from>
-                        <image>openjdk:14-alpine</image>
-                    </from>
-                    <to>
-                        <image>demo-microservices/${project.name}</image>
-                        <!-- génère un latest flag par défaut ; pour fixer un no de version, décommenter :
-                        <tags>
-                            <tag>${project.version}</tag>
-                        </tags>
-                        -->
-                    </to>
+                    <image>
+                        <name>demo-microservices/message</name>
+                    </image>
                 </configuration>
             </plugin>
         </plugins>
