migrate to Spring Boot 2.4.3

--- a/service-auth/src/main/resources/application.properties
+++ b/service-auth/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.application.name=service-auth
-server.port=8086
+server.port=8088
 spring.cloud.consul.host=${CONSUL_HOST:localhost}
 spring.cloud.consul.port=${CONSUL_PORT:8500}
+spring.cloud.loadbalancer.ribbon.enabled=false
+
+token.expiration_time_millis=1 000 000
