--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,19 @@
 version: '3'
 services:
   discovery:
-    image: consul:1.7
+    image: consul:1.9
     ports:
       - 8500:8500
 
   service-message:
     image: demo-microservices/service-message
+    restart: always
     environment:
       - JAVA_TOOL_OPTIONS=
-        -DCONSUL_HOST=discovery
+        -DCONSUL_HOST=discovery -DCONSUL_PORT=8500
     depends_on:
       - discovery
+      - service-auth
 
   service-auth:
     image: demo-microservices/service-auth
