consul configuration centralisée

--- a/service-auth/src/main/resources/application.properties
+++ b/service-auth/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=service-auth
 server.port=8088
+spring.config.import=optional:consul:
 spring.cloud.consul.host=${CONSUL_HOST:localhost}
 spring.cloud.consul.port=${CONSUL_PORT:8500}
 spring.cloud.loadbalancer.ribbon.enabled=false
