--- a/service-message/src/main/resources/application.properties
+++ b/service-message/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=service-message
 server.port=8085
 spring.cloud.consul.host=${CONSUL_HOST:localhost}
 spring.cloud.consul.port=${CONSUL_PORT:8500}
+spring.config.import=consul:
